# send

./: Agents.md  LICENSE  README.md  changelog.md  pyproject.toml
docs/: auth.md  credentials.md  message.md  transport.md
send/: client.py
send/auth/: __init__.py
send/common/: config.py
send/credentials/: __init__.py  models.py  store.py
send/message/: builder.py  models.py
send/runtime/: paths.py
send/transport/: dry_run_transport.py  google_transport.py  ms_graph_transport.py  send.py
tests/: test_client_creation.py  test_email_client_send.py  test_google_transport.py  test_message_builder.py
