[project]
name = "send"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "msal>=1.34.0",
    "platformdirs>=4.5.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["send*"]